[0.9.2] feature: schema support optional

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES5",
-        "lib": ["ES5"],
+        "lib": ["ES5", "ES2015.Promise"],
 
         "strict": true,
 
